[package]
name = "dist_fs"
version = "0.1.0"
edition = "2024"

[[bin]]
name="server"
path="src/server/main.rs"

[[bin]]
name="client"
path="src/client/main.rs"

[dependencies]
prost = "0.14.3"
tokio = {version = "1.49.0", features = ["full"]}
tonic = "0.14.4"
tonic-prost = "0.14.4"

[build-dependencies]
tonic-prost-build = "0.14.4"