[package]
name = "dist_fs"
version = "0.1.0"
edition = "2024"

[[bin]]
name="metadata_server"
path="src/metadata_server/main.rs"

[[bin]]
name="storage_server"
path="src/storage_server/main.rs"

[[bin]]
name="client"
path="src/client/main.rs"

[dependencies]
async-stream = "0.3.6"
prost = "0.14.3"
prost-types = "0.14.3"
tokio = {version = "1.50.0", features = ["full"]}
tokio-stream = "0.1.18"
tonic = "0.14.5"
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"
